--- a/TradeHubGui/Views/InstanceView.xaml
+++ b/TradeHubGui/Views/InstanceView.xaml
@@ -38,6 +38,17 @@
             </Grid>
         </DataTemplate>
 
+        <DataTemplate x:Key="SingleDataTemplate">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" SharedSizeGroup="lblGroup"/>
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <Label Grid.Column="0" Content="{Binding Key}"/>
+                <wpfToolkitExtended:SingleUpDown Grid.Column="1" FormatString="F2" Value="{Binding Value.ParameterValue}" Increment=".01" />
+            </Grid>
+        </DataTemplate>
+
         <DataTemplate x:Key="DecimalDataTemplate">
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -45,7 +56,7 @@
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
                 <Label Grid.Column="0" Content="{Binding Key}"/>
-                <wpfToolkitExtended:DecimalUpDown Grid.Column="1" Value="{Binding Value.ParameterValue}" Increment="1" />
+                <wpfToolkitExtended:DecimalUpDown Grid.Column="1" FormatString="F2" Value="{Binding Value.ParameterValue}" Increment=".01" />
             </Grid>
         </DataTemplate>
 
