--- a/TradeHubGui/Views/DataDownloaderView.xaml
+++ b/TradeHubGui/Views/DataDownloaderView.xaml
@@ -23,7 +23,7 @@
                 <TextBlock DockPanel.Dock="Top" Margin="10,0,10,20" Text="MARKET DATA PROVIDERS" Style="{StaticResource HeaderTextBlockStyle}"/>
 
                 <Grid>
-                    <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,0,200">
+                    <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,20,0,220">
                         <Image Width="42" Height="42" Source="{StaticResource imgWarning}" Margin="20"/>
                         <TextBlock Text="No connected market data providers!" VerticalAlignment="Center" HorizontalAlignment="Center"
                                    FontWeight="Thin" FontSize="22" Foreground="Silver"/>
@@ -65,8 +65,15 @@
                         </TabControl>
 
                         <!-- Tab content part -->
-                        <DockPanel Margin="20,50,20,20">
-                            <StackPanel DockPanel.Dock="Left">
+                        <Grid Margin="10,50,20,20">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="0.7*" MinWidth="70"/>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="0.3*" MinWidth="70"/>
+                            </Grid.ColumnDefinitions>
+                            
+                            <StackPanel Grid.Column="0">
                                 <StackPanel MinWidth="120" Margin="15,20,40,20" VerticalAlignment="Top">
                                     <CheckBox Content="Write binary" IsChecked="{Binding WriteBinary, UpdateSourceTrigger=PropertyChanged}" Margin="2"/>
                                     <CheckBox Content="Write CSV" IsChecked="{Binding WriteCsv, UpdateSourceTrigger=PropertyChanged}" Margin="2"/>
@@ -75,74 +82,7 @@
                                         Command="{Binding SaveOptionsCommand}"/>
                             </StackPanel>
 
-                            <StackPanel DockPanel.Dock="Right" Margin="0,80,20,0" HorizontalAlignment="Left">
-                                <GroupBox Header="Bar settings" Margin="10">
-                                    <Grid Grid.IsSharedSizeScope="True" MinWidth="220">
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition Height="Auto"/>
-                                            <RowDefinition Height="Auto"/>
-                                            <RowDefinition Height="Auto"/>
-                                            <RowDefinition Height="Auto"/>
-                                            <RowDefinition Height="Auto"/>
-                                        </Grid.RowDefinitions>
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="Auto" SharedSizeGroup="gr1"/>
-                                            <ColumnDefinition/>
-                                        </Grid.ColumnDefinitions>
-
-                                        <Label Content="Format"/>
-                                        <ComboBox Grid.Column="1" SelectedIndex="0"
-                                                  ItemsSource="{Binding BarFormats}" 
-                                                  SelectedItem="{Binding SelectedBarFormat}"/>
-                                        <Label Grid.Row="1" Grid.Column="0" Content="Price type"/>
-                                        <ComboBox Grid.Row="1" Grid.Column="1"  SelectedIndex="0"
-                                                  ItemsSource="{Binding BarPriceTypes}" 
-                                                  SelectedItem="{Binding SelectedBarPriceType}"/>
-                                        <Label Grid.Row="2" Grid.Column="0" Content="Pip Size"/>
-                                        <wpfToolkitExtended:DecimalUpDown Grid.Row="2" Grid.Column="1" 
-                                                                          Value="{Binding PipSize, UpdateSourceTrigger=PropertyChanged, FallbackValue=0.0001}" 
-                                                                          Increment="0.0001" Minimum="0.1" DefaultValue="0.0001"/>
-                                        <Label Grid.Row="3" Grid.Column="0" Content="Length"/>
-                                        <wpfToolkitExtended:IntegerUpDown Grid.Row="3" Grid.Column="1" 
-                                                                          Value="{Binding BarLength, UpdateSourceTrigger=PropertyChanged, FallbackValue=60}" 
-                                                                          Increment="1" Minimum="60" DefaultValue="60"/>
-
-                                        <Button Grid.Row="4" Grid.Column="1" Content="Submit" Margin="0,20,0,0" HorizontalAlignment="Left" MinWidth="80"
-                                                Command="{Binding SubmitBarSettingsCommand}"/>
-                                    </Grid>
-                                </GroupBox>
-
-                                <GroupBox Header="Historic bar settings" Margin="10">
-                                    <Grid Grid.IsSharedSizeScope="True" MinWidth="220">
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition Height="Auto"/>
-                                            <RowDefinition Height="Auto"/>
-                                            <RowDefinition Height="Auto"/>
-                                            <RowDefinition Height="Auto"/>
-                                        </Grid.RowDefinitions>
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="Auto" SharedSizeGroup="gr1"/>
-                                            <ColumnDefinition/>
-                                        </Grid.ColumnDefinitions>
-
-                                        <Label Content="Type"/>
-                                        <ComboBox Grid.Column="1" SelectedIndex="0"
-                                                  ItemsSource="{Binding BarTypes}" 
-                                                  SelectedItem="{Binding SelectedBarType}"/>
-                                        <Label Grid.Row="1" Grid.Column="0" Content="Start date"/>
-                                        <wpfToolkitExtended:DateTimeUpDown Grid.Row="1" Grid.Column="1" 
-                                                                       Value="{Binding StartDate, UpdateSourceTrigger=PropertyChanged}" />
-                                        <Label Grid.Row="2" Grid.Column="0" Content="End date"/>
-                                        <wpfToolkitExtended:DateTimeUpDown Grid.Row="2" Grid.Column="1" 
-                                                                       Value="{Binding EndDate, UpdateSourceTrigger=PropertyChanged}"/>
-
-                                        <Button Grid.Row="3" Grid.Column="1" Content="Submit" Margin="0,20,0,0" HorizontalAlignment="Left" MinWidth="80"
-                                                Command="{Binding SubmitHistoricBarSettingsCommand}"/>
-                                    </Grid>
-                                </GroupBox>
-                            </StackPanel>
-
-                            <DockPanel>
+                            <DockPanel Grid.Column="1">
                                 <TextBlock DockPanel.Dock="Top" Margin="16,22,10,0" Text="Select symbol to customize bar settings:"/>
 
                                 <DataGrid x:Name="OrderDetailsDataGrid" Margin="16,10"
@@ -158,8 +98,8 @@
                                           AutoGenerateColumns="False">
 
                                     <DataGrid.Columns>
-                                        <DataGridTextColumn Header="Instrument" Width="0.12*" Binding="{Binding Security.Symbol}" />
-                                        <DataGridTemplateColumn Header="Trades" Width="0.15*" SortMemberPath="Trades" HeaderStyle="{StaticResource RightAlignedColumnHeaderStyle}">
+                                        <DataGridTextColumn Header="Instrument" Width="150" MinWidth="90" Binding="{Binding Security.Symbol}"/>
+                                        <DataGridTemplateColumn Header="Trades" Width="150" MinWidth="70" SortMemberPath="Trades" HeaderStyle="{StaticResource RightAlignedColumnHeaderStyle}">
                                             <DataGridTemplateColumn.CellTemplate>
                                                 <DataTemplate>
                                                     <DockPanel>
@@ -169,7 +109,7 @@
                                                 </DataTemplate>
                                             </DataGridTemplateColumn.CellTemplate>
                                         </DataGridTemplateColumn>
-                                        <DataGridTemplateColumn Header="Quotes" Width="0.15*" SortMemberPath="Quotes" HeaderStyle="{StaticResource RightAlignedColumnHeaderStyle}">
+                                        <DataGridTemplateColumn Header="Quotes" Width="150" MinWidth="70" SortMemberPath="Quotes" HeaderStyle="{StaticResource RightAlignedColumnHeaderStyle}">
                                             <DataGridTemplateColumn.CellTemplate>
                                                 <DataTemplate>
                                                     <DockPanel>
@@ -179,7 +119,7 @@
                                                 </DataTemplate>
                                             </DataGridTemplateColumn.CellTemplate>
                                         </DataGridTemplateColumn>
-                                        <DataGridTemplateColumn Header="Bars" Width="0.15*" SortMemberPath="Bars" HeaderStyle="{StaticResource RightAlignedColumnHeaderStyle}">
+                                        <DataGridTemplateColumn Header="Bars" Width="150" MinWidth="70" SortMemberPath="Bars" HeaderStyle="{StaticResource RightAlignedColumnHeaderStyle}">
                                             <DataGridTemplateColumn.CellTemplate>
                                                 <DataTemplate>
                                                     <DockPanel>
@@ -193,7 +133,78 @@
                                 </DataGrid>
                             </DockPanel>
 
-                        </DockPanel>
+                            <GridSplitter Grid.Column="2" ResizeDirection="Columns"/>
+
+                            <ScrollViewer Grid.Column="3" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Margin="0,43,20,0">
+                                <StackPanel HorizontalAlignment="Left">
+                                    <HeaderedContentControl Header="Bar settings" Margin="10,10,10,20" Background="White">
+                                        <Grid Grid.IsSharedSizeScope="True" MinWidth="220" Margin="0,10,0,0">
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="Auto"/>
+                                                <RowDefinition Height="Auto"/>
+                                                <RowDefinition Height="Auto"/>
+                                                <RowDefinition Height="Auto"/>
+                                                <RowDefinition Height="Auto"/>
+                                            </Grid.RowDefinitions>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="Auto" SharedSizeGroup="gr1"/>
+                                                <ColumnDefinition/>
+                                            </Grid.ColumnDefinitions>
+
+                                            <Label Content="Format"/>
+                                            <ComboBox Grid.Column="1" SelectedIndex="0"
+                                                  ItemsSource="{Binding BarFormats}" 
+                                                  SelectedItem="{Binding SelectedBarFormat}"/>
+                                            <Label Grid.Row="1" Grid.Column="0" Content="Price type"/>
+                                            <ComboBox Grid.Row="1" Grid.Column="1"  SelectedIndex="0"
+                                                  ItemsSource="{Binding BarPriceTypes}" 
+                                                  SelectedItem="{Binding SelectedBarPriceType}"/>
+                                            <Label Grid.Row="2" Grid.Column="0" Content="Pip Size"/>
+                                            <wpfToolkitExtended:DecimalUpDown Grid.Row="2" Grid.Column="1" 
+                                                                          Value="{Binding PipSize, UpdateSourceTrigger=PropertyChanged, FallbackValue=0.0001}" 
+                                                                          Increment="0.0001" Minimum="0.1" DefaultValue="0.0001"/>
+                                            <Label Grid.Row="3" Grid.Column="0" Content="Length"/>
+                                            <wpfToolkitExtended:IntegerUpDown Grid.Row="3" Grid.Column="1" 
+                                                                          Value="{Binding BarLength, UpdateSourceTrigger=PropertyChanged, FallbackValue=60}" 
+                                                                          Increment="1" Minimum="60" DefaultValue="60"/>
+
+                                            <Button Grid.Row="4" Grid.Column="1" Content="Submit" Margin="0,20,0,0" HorizontalAlignment="Left" MinWidth="80"
+                                                Command="{Binding SubmitBarSettingsCommand}"/>
+                                        </Grid>
+                                    </HeaderedContentControl>
+
+                                    <HeaderedContentControl Header="Historic bar settings" Margin="10" Background="White">
+                                        <Grid Grid.IsSharedSizeScope="True" MinWidth="220" Margin="0,10,0,0">
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="Auto"/>
+                                                <RowDefinition Height="Auto"/>
+                                                <RowDefinition Height="Auto"/>
+                                                <RowDefinition Height="Auto"/>
+                                            </Grid.RowDefinitions>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="Auto" SharedSizeGroup="gr1"/>
+                                                <ColumnDefinition/>
+                                            </Grid.ColumnDefinitions>
+
+                                            <Label Content="Type"/>
+                                            <ComboBox Grid.Column="1" SelectedIndex="0"
+                                                  ItemsSource="{Binding BarTypes}" 
+                                                  SelectedItem="{Binding SelectedBarType}"/>
+                                            <Label Grid.Row="1" Grid.Column="0" Content="Start date"/>
+                                            <wpfToolkitExtended:DateTimeUpDown Grid.Row="1" Grid.Column="1" 
+                                                                       Value="{Binding StartDate, UpdateSourceTrigger=PropertyChanged}" />
+                                            <Label Grid.Row="2" Grid.Column="0" Content="End date"/>
+                                            <wpfToolkitExtended:DateTimeUpDown Grid.Row="2" Grid.Column="1" 
+                                                                       Value="{Binding EndDate, UpdateSourceTrigger=PropertyChanged}"/>
+
+                                            <Button Grid.Row="3" Grid.Column="1" Content="Submit" Margin="0,20,0,0" HorizontalAlignment="Left" MinWidth="80"
+                                                Command="{Binding SubmitHistoricBarSettingsCommand}"/>
+                                        </Grid>
+                                    </HeaderedContentControl>
+                                </StackPanel>
+                            </ScrollViewer>
+                        </Grid>
+                        
                     </Grid>
                 </Grid>
             </DockPanel>
